Trying out flexible box model

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<label for="line-size">leading</label>
 		<input id="line-size" name="line-size" type="number" min="0" maxlenght="5" size="3">
 		<label for="akva-opacity">opacity</label>
-		<input id="akva-opacity" name="akva-opacity" type="number" min="0" max="10" maxlenght="5" size="3">
+		<input id="akva-opacity" name="akva-opacity" type="range" min="0" max="10" maxlenght="5" size="3">
 	</form>
 </div>
 	
@@ -58,9 +58,6 @@
 	<ul class="akva-cols parent-width"></ul>
 	<ul class="akva-baseline"></ul>
 </div>
-	
-
-
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script src="js/akva.js"></script>
