--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 <body>
 
 <header>
-	<h1>akvaGrid</h1>
-	<p>Example site is built for 6 col grid with 22px leading.</p>
+	<h1>akva grid</h1>
 </header>
 
 
-<div class="testcol-parent" style="display: none;>
+<div class="testcol-parent">
 
 
 <blockquote>
