Some more styling of the example page

--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
 <div id="akva-panel">
 	<form id="akva-form">
 		<label for="grid-size">cols</label>
-		<input id="grid-size" name="grid-size" type="number" min="0" max="16" maxlength="5" size="3">
+		<input id="grid-size" name="grid-size" type="number" min="0" max="16" maxlength="5" size="7">
 		<label for="line-size">leading</label>
-		<input id="line-size" name="line-size" type="number" min="0" maxlenght="5" size="3">
+		<input id="line-size" name="line-size" type="number" min="0" maxlenght="5" size="7">
+		<label for="akva-gutter">gutter</label>
+		<input id="akva-gutter" name="akva-gutter" step="0.1" type="number" min="0" maxlenght="5" size="7">
+		<span>%</span>
 		<label for="akva-opacity">opacity</label>
 		<input id="akva-opacity" name="akva-opacity" type="range" min="0" max="10" maxlenght="5" size="3">
 	</form>
